--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -59,6 +59,7 @@
                 android:textSize="15sp" />
 
             <EditText
+                android:id="@+id/input_regis_name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -81,6 +82,7 @@
                 android:textSize="15sp" />
 
             <EditText
+                android:id="@+id/input_regis_surname"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -113,6 +115,7 @@
                 android:textSize="15sp" />
 
             <EditText
+                android:id="@+id/input_regis_email"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -135,6 +138,7 @@
                 android:textSize="15sp" />
 
             <EditText
+                android:id="@+id/input_regis_pwd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
@@ -178,6 +182,7 @@
                         android:textSize="15sp" />
 
                     <EditText
+                        android:id="@+id/input_regis_prefix"
                         android:layout_width="65dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
@@ -209,6 +214,7 @@
                         android:textSize="15sp" />
 
                     <EditText
+                        android:id="@+id/input_regis_phone"
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="-10dp"
@@ -227,15 +233,15 @@
 
             </LinearLayout>
 
-
             <Button
                 android:layout_width="280dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="3dp"
                 android:layout_gravity="center"
+                android:layout_marginStart="3dp"
                 android:layout_marginTop="50dp"
                 android:layout_marginBottom="50dp"
                 android:background="@drawable/ic_input_custom"
+                android:onClick="signUpUser"
                 android:text="Suscribe "
                 android:textColor="@color/white"
                 android:textSize="15sp"
@@ -245,7 +251,6 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
         </LinearLayout>
-
 
     </ScrollView>
 
