--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:onClick="signInUser"
     tools:context=".login.SignActivity">
 
     <RelativeLayout
@@ -58,7 +59,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="360dp"
+        android:layout_marginTop="267dp"
         android:layout_marginEnd="50dp"
         android:inputType="textEmailAddress|textNoSuggestions"
         android:maxLines="1"
@@ -69,7 +70,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 
 
     <TextView
@@ -92,7 +92,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="267dp"
+        android:layout_marginTop="360dp"
         android:layout_marginEnd="50dp"
         android:inputType="textPassword"
         android:maxLines="1"
@@ -112,6 +112,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginBottom="50dp"
         android:background="@drawable/ic_input_custom"
+        android:onClick="signInUser"
         android:text="LOGIN"
         android:textColor="@color/white"
         android:textSize="15sp"
