--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:onClick="signInUser"
-    tools:context=".login.SignActivity">
+    tools:context=".ui.login.SignActivity">
 
     <RelativeLayout
         android:id="@+id/relativeLayout"
