--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -45,6 +45,7 @@
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="20dp"
                 android:hint="@string/name_surname"
+                style="@style/Theme.HealtyApplication.NoActionBar"
                 android:textColor="@color/Deepblue"
                 android:textSize="18sp"
                 android:textStyle="bold" />
@@ -215,7 +216,7 @@
 
                     <EditText
                         android:id="@+id/input_regis_phone"
-                        android:layout_width="200dp"
+                        android:layout_width="265dp"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="-10dp"
                         android:layout_marginEnd="30dp"
