--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,37 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
+            android:icon="@drawable/ic_baseline_home_24"
             android:title="@string/menu_home" />
+
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:id="@+id/nav_food"
+            android:icon="@drawable/ic_dining_24"
+            android:title="Food" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="@string/menu_slideshow" />
+            android:id="@+id/nav_notes"
+            android:icon="@drawable/ic_baseline_sticky_note_2_24"
+            android:title="Notes" />
 
-    </group>
+        <item android:title="Profile">
+            <menu tools:showIn="navigation_view">
+                <item
+                    android:id="@+id/nav_setting"
+                    android:icon="@drawable/ic_baseline_settings_24"
+                    android:title="Tools" />
+                <item
+                    android:id="@+id/nav_account"
+                    android:icon="@drawable/ic_baseline_manage_accounts_24"
+                    android:title="Account" />
+                <item
+                    android:id="@+id/nav_logout"
+                    android:icon="@drawable/ic_baseline_logout_24"
+                    android:title="Logout" />
 
-    <item android:title="Profile">
-        <menu>
-            <item
-                android:id="@+id/nav_manage"
-                android:icon="@drawable/ic_baseline_settings_24"
-                android:title="Tools" />
-            <item
-                android:id="@+id/nav_account"
-                android:icon="@drawable/ic_baseline_manage_accounts_24"
-                android:title="Account" />
-            <item
-                android:id="@+id/nav_logout"
-                android:icon="@drawable/ic_baseline_logout_24"
-                android:title="Logout" />
+            </menu>
+        </item>
 
-        </menu>
-    </item>
 </menu>
