--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,7 +9,23 @@
         android:id="@+id/nav_home"
         android:name="com.exemple.healtyapplication.ui.home.HomeFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/fragment_home" >
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_food"
+        android:name="com.exemple.healtyapplication.ui.food.FoodFragment"
+        android:label="NUtrition"
+        tools:layout="@layout/fragmment_food" >
+    </fragment>
+
+    <fragment
+        android:id="@+id/nav_notes"
+        android:name="com.exemple.healtyapplication.ui.notes.NotesFragment"
+        android:label="Notes"
+        tools:layout="@layout/fragment_notes" >
+    </fragment>
+
 
     <fragment
         android:id="@+id/nav_account"
@@ -22,9 +38,10 @@
         android:name="com.exemple.healtyapplication.ui.logout.LogoutFragment"
         tools:layout="@layout/fragment_logout"/>
 
-    <activity
-        android:id="@+id/nav_manage"
-        android:name="com.exemple.healtyapplication.ui.setting.SettingActivity"
-        android:label="Setting" />
+    <fragment
+        android:id="@+id/nav_setting"
+        android:name="com.exemple.healtyapplication.ui.setting.SettingFragment"
+        android:label="Setting"
+        tools:layout="@layout/fragment_setting"/>
 
 </navigation>
